<resources>
    <string name="app_name">War Games</string>
    <string name="war_games">War Games</string>
    <string name="number_war">Number War</string>
    <string name="winning_munitions">Winning Munitions</string>
    <string name="attack">ATTACK!</string>
    <string name="me">Me</string>
    <string name="you">You</string>
    <string name="remaining">Remaining</string>
    <string name="reinforcements">Reinforcements</string>
</resources>
